--- a/src/app/components/commoncomponents/navbar.module.css
+++ b/src/app/components/commoncomponents/navbar.module.css
@@ -1,10 +1,35 @@
 .container {
   display: flex;
-  justify-content: space-around;
-  background-color: white;
+  justify-content: space-between;
+  color: white;
+  background-color: black;
 }
 .card {
-  /* border: 1px solid gray; */
   cursor: pointer;
   padding: 10px;
+}
+.cards{
+  cursor: pointer;
+  padding: 10px;
+  border: 1px solid #FFA90F;
+  color: #FFA90F;
+  border-radius: 5px;
+
+}
+.scontainer1{
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  font-style: italic;
+  width: 600px;
+}
+.link
+{
+  text-decoration: none;
+  color: white;
+}
+.links
+{
+  text-decoration: none;
+  color: #FFA90F;
 }
