--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,9 @@
   scrollbar-width: thin;
   scrollbar-color: #2E7575 #DFE9EB;
 }*/
-
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
   height: 10px;
@@ -62,6 +64,7 @@ html {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  background-color: black;
 }
 .heading {
   color: white;
@@ -126,4 +129,22 @@ select {
 .rcontainer input {
   height: 25px;
   width: 25px;
+}
+.inputs{
+  border-radius: 5px;
+  width: 200px;
+
+}
+.inputs:focus{
+  outline: none;
+}
+input[type="radio"]
+{
+  width: 15px;
+}
+.dnone{
+  display: none;
+}
+.normal{
+  display: inline;
 }
