--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -14,11 +14,14 @@
   height: 100vh;
   display: flex;
   justify-content: center;
+  gap: 100px;
   align-items: center;
+  background-color: black;
 }
 .btn {
   padding: 10px 20px;
   font-size: 17px;
+  border-radius: 5px;
   border: 1px solid white;
   transition: transform 0.5s;
 }
@@ -26,3 +29,16 @@
 .btn:hover {
   transform: translateY(-10px);
 }
+
+.scontainer{
+  display: flex;
+  background-color: white;
+  align-items: center;
+}
+.minput:focus{
+outline: none;
+}
+.minput{
+  text-align: left;
+}
+
