--- a/src/app/mycreations/mycreations.module.css
+++ b/src/app/mycreations/mycreations.module.css
@@ -1,6 +1,10 @@
 .cardcontainer {
+  background-color: black;
+  color: white;
   display: flex;
+  flex-wrap: wrap;
   gap: 40px;
+  justify-content: center;
 }
 .card {
   position: relative;
@@ -11,6 +15,17 @@
   border: 1px solid black;
   border-radius: 5px;
 }
-.card:hover {
-  transform: translateY(10px);
+.icardcontainer{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid white;
+  border-radius: 5px;
+  gap: 5px;
+
 }
