--- a/src/app/signup/signup.module.css
+++ b/src/app/signup/signup.module.css
@@ -5,24 +5,47 @@
   justify-content: space-around;
   height: 450px;
   width: 400px;
-  border: 1px solid white;
   border-radius: 5px;
   color: white;
 }
+.imagecontainer{
+  position: relative;
+  height: 450px;
+  width: 400px;
+}
 .maincontainer {
+  background-color: black;
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.mcontainer{
+  display: flex;
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 5px;
+}
 .btn {
   padding: 10px 20px;
   font-size: 17px;
   border: 1px solid white;
-  transition: transform 0.5s;
+  /* transition: transform 0.5s; */
+  cursor: pointer;
+  border-radius: 3px;
 }
 
-.btn:hover {
-  transform: translateY(-10px);
-}
+
+.minput:focus{
+  outline: none;
+  }
+  .minput{
+    text-align: left;
+    background-color: black;
+    border: 0px;
+    color: white  ;
+    border-bottom: 1px solid white;
+  }
+  
+  
