--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,52 +7,13 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 /* Chrome, Edge and Safari */
-*::-webkit-scrollbar {
-  height: 10px;
-  width: 10px;
-}
-*::-webkit-scrollbar-track {
-  border-radius: 5px;
-  background-color: #dfe9eb;
-}
-
-*::-webkit-scrollbar-track:hover {
-  background-color: #b8c0c2;
-}
-
-*::-webkit-scrollbar-track:active {
-  background-color: #b8c0c2;
-}
-
-*::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: rgb(103, 68, 105);
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(103, 68, 105);
-}
-
-*::-webkit-scrollbar-thumb:active {
-  background-color: rgb(103, 68, 105);
-}
 
 body,
 html {
   border: 0;
   margin: 0;
-  background: #360033; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #0b8793,
-    #360033
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #0b8793,
-    #360033
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+  background-color: black;
+ }
 .container {
   display: flex;
   justify-content: center;
