changing the pattern of the flow

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -228,3 +228,14 @@
     transform: rotate(0deg);
   }
 }
+
+.imagecontainer {
+  text-align: center;
+  position: relative;
+  width: 1200px;
+  height: 800px;
+}
+.imageinnercontainer {
+  position: absolute;
+  color: yellow;
+}
