--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,9 @@
   scrollbar-width: thin;
   scrollbar-color: #2E7575 #DFE9EB;
 }*/
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 /* Chrome, Edge and Safari */
 
 body,
@@ -13,7 +13,7 @@ html {
   border: 0;
   margin: 0;
   background-color: black;
- }
+}
 .container {
   display: flex;
   justify-content: center;
@@ -91,21 +91,22 @@ select {
   height: 25px;
   width: 25px;
 }
-.inputs{
+.inputs {
   border-radius: 5px;
   width: 200px;
-
 }
-.inputs:focus{
+.inputs:focus {
   outline: none;
 }
-input[type="radio"]
-{
+input[type="radio"] {
   width: 15px;
 }
-.dnone{
+.dnone {
   display: none;
 }
-.normal{
+.normal {
   display: inline;
+}
+.montserrat {
+  font-family: var(--font-montserrat);
 }
